# TENLab

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  README.txt  add.c  ast.ml  dim.out  dim.tb  generate.sh  mult.c  parser.mly  pe.c  pe.cc  rundemo.sh  scanner.mll  tenlab.tb  tensor.h  tensorast.mli  tensorcodegen.ml  tensorcodegen.native  tensordim.ml  tensordim.native  tensorparser.mly  tensorsast.mli  tensorscanner.mll  tensorsemant.ml  test  test-assign.out  test-build-in.out  test-noret.out  test-pereal.out  test-pesub.out  test.c  test.ll  test.out  test.s  test.sh  test.tl
_build/: _digests  _log  tensorast.cmi  tensorast.mli.depends  tensordim.cmi  tensordim.cmo  tensordim.cmx  tensordim.ml  tensordim.ml.depends  tensordim.native  tensorparser.cmi  tensorparser.cmx  tensorparser.ml  tensorparser.ml.depends  tensorparser.mli  tensorparser.mli.depends  tensorparser.mly  tensorscanner.cmi  tensorscanner.cmo  tensorscanner.cmx  tensorscanner.ml  tensorscanner.ml.depends  tensorscanner.mll
demo/: test-ML.tl  test-parallel.out  test-parallel.tl  test-quicksort.out  test-quicksort.tl  test-strassen.out  test-strassen.tl  test-topo.out  test-topo.tl
func/: mult.c  print.c  tensor.h
include/: add.cc  divide.cc  dotmul.cc  dotpow.cc  equal.cc  floordivide.cc  greater.cc  greaterequal.cc  index.cc  iseuqal.cc  less.cc  lessequal.cc  logicaland.cc  matpow.cc  mod.cc  mult.cc  notequal.cc  print.cc  subtract.cc  tensor.cc  tensor.h  transpose.cc
lib/: Makefile  add.cc  all.cc  any.cc  bool.cc  builtin.c  builtin.cc  cat.cc  dotmul.cc  dotpow.cc  gc.cc  (+23 more)
(+189 files in other folders)
